Bug 78742 - Trying to insert a spreadsheet into a master document causes freeze/crash
Summary: Trying to insert a spreadsheet into a master document causes freeze/crash
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
3.6.0.4 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:4.3.0 target:4.2.5
Keywords: regression
Depends on:
Blocks:
 
Reported: 2014-05-15 12:35 UTC by A. Barcomb
Modified: 2021-05-05 11:17 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example ODS file which triggers the crash (12.71 KB, application/vnd.oasis.opendocument.spreadsheet)
2014-05-16 16:45 UTC, A. Barcomb
Details

Note You need to log in before you can comment on or make changes to this bug.
Description A. Barcomb 2014-05-15 12:35:20 UTC
If I create a master document and attempt to insert a new file which happens to be a Libre Office spreadsheet, Libreoffice hangs and eventually crashes.  I am able to add Writer documents and also slides to the master document.

Steps to reproduce:
1. Create a new master document.
2. In the master document navigator, select Insert/File and choose a Libreoffice spreadsheet.

Actual results:
Libreoffice hangs and then crashes.

Expected results:
While I would prefer to be able to add spreadsheets to the master document so that I am able to cross-reference between all documents which are part of the project (consider an exercise/answer sheet where you want to demonstrate how the spreadsheet was filled), if this is not supported I would expect to receive an error message informing me that I may not add a spreadsheet to a master document.

This was observed on Fedora 20.
Comment 1 Joel Madero 2014-05-16 02:27:01 UTC
I just tested this with 4.2.4.2 release
Ubuntu 14.04


I didn't get a hang at all. I just saved a blank spreadsheet and then inserted it into a master document with no problem.

Marking as WFM

Please test against 4.2.4.2 using a blank profile: https://wiki.documentfoundation.org/UserProfile

If you still can reproduce, set the bug to UNCONFIRMED and I will see if I can find a secondary tester. Thanks!
Comment 2 A. Barcomb 2014-05-16 13:30:33 UTC
Here is a backtrace of a crash I triggered this morning with my original setup.

https://retrace.fedoraproject.org/faf/reports/435435/
Comment 3 A. Barcomb 2014-05-16 15:18:43 UTC
After updating to 4.2.4.2, I was able to reproduce the bug in my original account.  Using the RedHat bug reporting tool, I generated the following bug report which includes more details than my previous message (when there was an error generating the bug report).

https://bugzilla.redhat.com/show_bug.cgi?id=1098579
Comment 4 Joel Madero 2014-05-16 15:25:34 UTC
Was this with a fresh profile?
Comment 5 A. Barcomb 2014-05-16 15:42:51 UTC
Nope, that's still on my todo list.
Comment 6 A. Barcomb 2014-05-16 16:45:49 UTC
Created attachment 99164 [details]
Example ODS file which triggers the crash
Comment 7 A. Barcomb 2014-05-16 16:49:55 UTC
I created a new account and tried the problem with a clean ODS file.  It did not crash.  I tried it with my original ODS file and it crashed.  

I tried to modify the clean ODS file by adding various features which were present in the original document but was unable to replicate the crash.

I tried removing things from the original ODS file to see what was the minimum amount of data required to trigger the crash, and ended up with a completely empty file (aside from a non-default sheet name), which I've uploaded.

So I assume there is something strange about this ODS file, which can be edited normally in Calc.
Comment 8 Michael Stahl 2014-05-19 16:02:55 UTC
Writer master documents only support Writer documents, by design.

in older versions it was not possible to insert non-Writer documents,
so this is a regression.

in 3.5.7, the SwGlobalTree::InsertRegion() doesn't do anything because it is passed an empty list of files.

inserting non-Writer documents is enabled by:

commit 3da8f3680556e0163f660a0a159930337c8c32ff
Author:     Kohei Yoshida <kohei.yoshida@gmail.com>
AuthorDate: Tue Jun 5 15:45:52 2012 -0400

    fdo#50694: Honor the preferred filter returned by type detection.
Comment 9 Commit Notification 2014-05-19 16:54:21 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=805fd1ca343d6295b8114a24cc29bdac332f266d

fdo#78742: SfxFilterMatcher: respect requested document service if set



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2014-05-23 03:06:46 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f3ca9cc78e77dda656b5c39be928fdbb7f8babe8&h=libreoffice-4-2

fdo#78742: SfxFilterMatcher: respect requested document service if set


It will be available in LibreOffice 4.2.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.