fdo#78742: SfxFilterMatcher: respect requested document service if set

sfx2::DocumentInserter::CreateMediumList() creates a SfxFilterMatcher
that should match Writer filters only, but actually Calc filters may be
returned; check that the document service matches.

(regression from 3da8f3680556e0163f660a0a159930337c8c32ff)

Change-Id: I6208d38c1110355105aa5d1ffa1b57142193a4d7